# reimagined-yads

./: .gitignore  CMakeLists.txt  README.md  create_category.c  create_category.h  directoryVariables.c  directoryVariables.h  init.c  init.h  main.c
categoryHandling/: categoryFilesPath.c  categoryFilesPath.h  categoryStructHandling.c  createCategory.c  createCategory.h  downloadLists.c  downloadLists.h  listOfListsHandling.h  listofListsHandling.c  listofListsHandling.h  userAddedListOfURLsHandling.c  userAddedListOfURLsHandling.h
libs/CategoryStructHandling/: CMakeLists.txt  categoryStructHandling.c  categoryStructHandling.h
libs/DownloadFile/: CMakeLists.txt  libDownloadFile.c  libDownloadFile.h
libs/FileIO/: CMakeLists.txt  libFileIO.c  libFileIO.h  libfileio.c  libfileio.h
libs/ListFileIO/: CMakeLists.txt  libListFileIO.c  libListFileIO.h
libs/StringArrayProcessing/: CMakeLists.txt  libStringArrayHandling.c  libStringArrayHandling.h
libs/URLProcessing/: CMakeLists.txt  libURLHandling.c  libURLHandling.h
